--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -666,3 +666,10 @@ a.custom-cart-full{
     width: 100%;
     margin-bottom:1%;
   }
+
+  .flash2 {
+    color: #C70039;
+    padding: 1%;
+    width: 100%;
+    margin:1%;
+  }
