--- a/app/templates/auth/email/client_cancel.html
+++ b/app/templates/auth/email/client_cancel.html
@@ -1,6 +1,6 @@
 <p> CANCEL RESERVATION</p>>
-<p>Client {{ username }},</p>
-<p>Canceled reservation {{ date }} at {{ time }} master: {{ master }}</p>
-<p>Check timetable!</p>
-<p>Inform the master!</p>
+<p>Asiakas {{ username }},</p>
+<p>peruutti varauksen {{ date }} klo {{ time }} osaaja: {{ master }}</p>
+<p>Tarkista aikataulu!</p>
+<p>Ilmoita osaajalle!</p>
 
