--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -75,9 +75,7 @@ HIUSMAGIA parturi kampaamo
                                             
                     <div class="custom-overlay">                   
                         <div class="custom-image-text">
-                        Pilates on kehonhallintatekniikka, 
-                        joka vahvistaa keskivartalon syviä lihaksia, 
-                        syventää hengitystä ja opettaa liikkumaan fysiologisesti oikein.                
+                            Shampoot                
                         </div>                    
                     </div>                
             </div>                    
@@ -91,8 +89,7 @@ HIUSMAGIA parturi kampaamo
                     <div class="custom-top-right"><h3>alk.15€</h3></div>
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                        Joogaan kuuluu asentoharjoituksia ja meditaatiota, 
-                        ja sen harjoittaminen on monille kehollista terapiaa ja rentoutumista.               
+                            Hoitoaineet               
                         </div>
                     </div>
             </div>                    
@@ -111,8 +108,7 @@ HIUSMAGIA parturi kampaamo
                     <div class="custom-top-right"><h3>alk.30€</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                        Kun haluat suunnitelmallista ja yksilöllistä ohjausta, ammattitaitoinen ja 
-                        motivoiva personal trainer auttaa sinut saavuttaa tavoitteesi.                                                             
+                            Muotoilutuotteet                                                             
                         </div>
                     </div>
             </div>                    
@@ -126,8 +122,7 @@ HIUSMAGIA parturi kampaamo
                     <div class="custom-top-right"><h3>alk.25€</h3></div>
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                        Tarjoamme laadukkaita hierontapalveluita. Hieronta tehostaa aineenvaihduntaa 
-                        ja vilkastuttaa verenkiertoa iästä riippumatta.               
+                            Hiusvärit         
                         </div>
                     </div>
             </div>                    
@@ -146,8 +141,7 @@ HIUSMAGIA parturi kampaamo
                     <div class="custom-top-right"><h3>alk.20€</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                        Zumba on aerobicinen fitness-ohjelma, jonka musiikki perustuu pääosin latinalaistansseihin.
-                        Tunti koostuu intervallityyppisestä ohjelmasta.               
+                            Permanenttiaineet            
                         </div>
                     </div>
             </div>                    
@@ -161,8 +155,7 @@ HIUSMAGIA parturi kampaamo
                     <div class="custom-top-right"><h3>alk.10€</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                        Kausikortilla pääset treenaamaan kaikissa meidän saleissa ja liikuntaryhmissä rajattomasti.
-                        Kortin saat ensimmäisellä käyntikerralla.              
+                            Tarvikkeet             
                         </div>
                     </div>
             </div>                    
