--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -40,7 +40,7 @@
               class="nav-item nav-link">MEISTÄ
             </a>
             <a 
-              href="{{ url_for('main.trainers') }}" 
+              href="{{ url_for('main.palvelut') }}" 
               class="nav-item nav-link">PALVELUT
             </a>
             <a 
