--- a/app/templates/admins/admin_page.html
+++ b/app/templates/admins/admin_page.html
@@ -4,6 +4,8 @@ HIUSMAGIA parturi kampaamo
 {% endblock %}
 
 {% block content %}
+{% if current_user.is_authenticated %}
+    {% if current_user.admin == 1 %}
     <h2 class="custom-txt-center custom-margin-bottom-4">TERVETULOA ADMINISTRAATTORIN SIVULLE</h2>  
 
     <!--Row starts-->
@@ -136,8 +138,8 @@ HIUSMAGIA parturi kampaamo
                                         <th class="d-none">id </th>
                                         <th scope="col">Päivämäärä</th>
                                         <th scope="col">Ajankohta</th>
-                                        <th scope="col">Liikuntalaji</th>
-                                        <th scope="col">Ohjaaja</th>
+                                        <th scope="col">Palvelu</th>
+                                        <th scope="col">Osaaja</th>
                                         <th scope="col">Vapaat paikat</th>
                                         <th scope="col">Tila</th>
                                         <th scope="col">Muokaa</th>
@@ -156,6 +158,53 @@ HIUSMAGIA parturi kampaamo
     </div>
     <!--Row ends-->
     <script type="text/javascript" src="{{ url_for('static', filename='/js/services_available_admin.js') }}"></script>
+
+    {% elif current_user.admin != 1 %}
+        <!--Row starts-->
+        <div class="row custom-margin-for-form">
+            <div class="col-lg-2">        
+            </div>
+
+            <div class="col-lg-8">        
+                <div class="custom-form">
+                <h2 style="text-align: center;">KIRJAUDU ADMINISTRAATTORIN SIVULLE</h2> 
+                <p style="text-align: center; font-size: 120%;">TÄMÄ SIVU ON TARKOITETTU VAIN ADMINISTRAATTORILLE.<br>
+                KIRJAUDU ULOS ASIAKKAAN TILILTA<br> 
+                JA KIRJAUDU SISÄÄN ADMINISTRAATTORINA.<br>                 
+                </p>       
+                <p><a href="{{ url_for('auth.logout') }}" class="btn btn-block mt-0 custom-green-buy">KIRJAUDU ULOS</a></p>
+                <p><a href="{{ url_for('main.client_page') }}" class="btn btn-block mt-0 custom-green-buy">ASIAKKAAN SIVULLE</a></p>        
+                </div>                   
+            </div>
+
+            <div class="col-lg-2">        
+            </div>
+        </div>
+        <!--Row ends-->
+    {% endif %}
+{% else %}
+
+    <!--Row starts-->
+    <div class="row custom-margin-for-form">
+        <div class="col-lg-2">        
+        </div>
+
+        <div class="col-lg-8">        
+            <div class="custom-form">
+            <h2 style="text-align: center;">KIRJAUDU ADMINISTRAATTORIN SIVULLE</h2> 
+            <p style="text-align: center; font-size: 120%;">TÄMÄ SIVU ON TARKOITETTU VAIN ADMINISTRAATTORILLE.<br>
+            KIRJAUDU SISÄÄN ADMINISTRAATTORINA.           
+            </p>       
+            <p><a href="{{ url_for('auth.login') }}" class="btn btn-block mt-0 custom-green-buy">KIRJAUDU SISÄÄN</a></p>                    
+            </div>                   
+        </div>
+
+        <div class="col-lg-2">        
+        </div>
+    </div>
+    <!--Row ends--> 
+    
+{% endif %}
 {% endblock %}
 
 <script type="text/javascript" src="admin_workouts_select.js"></script>
