--- a/app/templates/auth/email/confirm.html
+++ b/app/templates/auth/email/confirm.html
@@ -1,8 +1,8 @@
-<p>Dear {{ user.username }},</p>
+<p>Hyvä {{ user.username }},</p>
 <p>Tervetuloa <b>HIUSMAGIAAN</b>!</p>
-<p>To confirm your account please <a href="{{ url_for('auth.confirm', token=token, _external=True) }}">click here</a>.</p>
-<p>Alternatively, you can paste the following link in your browser's address bar:</p>
+<p>Ole hyvä ja vahvista tilisi klikkaamalla <a href="{{ url_for('auth.confirm', token=token, _external=True) }}">tästä linkistä</a>.</p>
+<p>Vaihtoehtoisesti voit liittää seuraavan linkin selaimesi osoiteriville:</p>
 <p>{{ url_for('auth.confirm', token=token, _external=True) }}</p>
-<p>Sincerely,</p>
-<p>The Flasky Team</p>
-<p><small>Note: replies to this email address are not monitored.</small></p>
+<p>Ystävällisin terveisin,</p>
+<p>HIUSMAGIAN tiimi</p>
+<p><small>Huom: Tähän sähköpostiosoitteeseen lähetettyjä viestejä ei tarkisteta.</small></p>
