--- a/app/templates/auth/email/reset_password.html
+++ b/app/templates/auth/email/reset_password.html
@@ -1,8 +1,8 @@
-<p>Dear {{ user.username }},</p>
-<p>To reset your password <a href="{{ url_for('auth.password_reset', token=token, _external=True) }}">click here</a>.</p>
-<p>Alternatively, you can paste the following link in your browser's address bar:</p>
+<p>Hyvä {{ user.username }},</p>
+<p>Voit nollata salasanasi napsauttamalla seuraavaa <a href="{{ url_for('auth.password_reset', token=token, _external=True) }}">linkkiä</a>.</p>
+<p>Vaihtoehtoisesti voit liittää seuraavan linkin selaimesi osoiteriville:</p>
 <p>{{ url_for('auth.password_reset', token=token, _external=True) }}</p>
-<p>If you have not requested a password reset simply ignore this message.</p>
-<p>Sincerely,</p>
-<p>The Flasky Team</p>
-<p><small>Note: replies to this email address are not monitored.</small></p>
+<p>Jos et ole pyytänyt salasanan nollaamista, ohita tämä viesti.</p>
+<p>Ystävällisin terveisin,</p>
+<p>HIUSMAGIAN tiimi</p>
+<p><small>Huom: Tähän sähköpostiosoitteeseen lähetettyjä viestejä ei tarkisteta.</small></p>
