--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -17,26 +17,46 @@
                 <div class="form-group">                    
                     {{ form.email.label }}                    
                     {{ form.email(class="form-control") }}
+
+                    {% for message in form.email.errors %}
+                        <div class="flash2">{{ message }}</div>
+                    {% endfor %}
                 </div>
 
                 <div class="form-group">                    
                     {{ form.username.label }}                    
                     {{ form.username(class="form-control") }}
+
+                    {% for message in form.username.errors %}
+                        <div class="flash2">{{ message }}</div>
+                    {% endfor %}
                 </div>
 
                 <div class="form-group">                    
                     {{ form.phone_number.label }}                    
                     {{ form.phone_number(class="form-control") }}
+
+                    {% for message in form.phone_number.errors %}
+                        <div class="flash2">{{ message }}</div>
+                    {% endfor %}
                 </div>
 
                 <div class="form-group">                   
-                    {{ form.password.label }}                    
+                    {{ form.password.label }}                                          
                     {{ form.password(class="form-control") }}                    
+                    
+                    {% for message in form.password.errors %}
+                        <div class="flash2">{{ message }}</div>
+                    {% endfor %}
                 </div>
 
                 <div class="form-group">                   
                     {{ form.password2.label }}                    
-                    {{ form.password2(class="form-control") }}                    
+                    {{ form.password2(class="form-control") }} 
+                    
+                    {% for message in form.password2.errors %}
+                        <div class="flash2">{{ message }}</div>
+                    {% endfor %}
                 </div>             
 
                 <p></p>
