--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -1,20 +1,34 @@
 {% extends "layout.html" %}
 
-{% block title %}Flasky - Confirm your account{% endblock %}
+{% block title %}HIUSMAGIA - Vahvista tilisi{% endblock %}
 
-{% block page_content %}
-<div class="page-header">
-    <h1>
-        Hello, {{ current_user.username }}!
-    </h1>
-    <h3>You have not confirmed your account yet.</h3>
-    <p>
-        Before you can access this site you need to confirm your account.
-        Check your inbox, you should have received an email with a confirmation link.
-    </p>
-    <p>
-        Need another confirmation email?
-        <a href="{{ url_for('auth.resend_confirmation') }}">Click here</a>
-    </p>
-</div>
+{% block content %}
+
+    <!--Row starts-->
+    <div class="row custom-margin-for-form">
+        <div class="col-lg-2">        
+        </div>
+                
+        <div class="col-lg-8">
+            <div class="custom-form">
+                <h1>
+                    Hyvä {{ current_user.username }}!
+                </h1>
+                <h3>Et ole vielä vahvistanut tiliäsi.</h3>
+                <p>
+                    Ennen kuin pääset tälle sivustolle, sinun on vahvistettava tilisi.
+                    Tarkista postilaatikkosi, sinun olisi pitänyt saada sähköpostiviesti, jossa on vahvistuslinkki.
+                </p>
+                <p>
+                    Tarvitsetko uuden vahvistussähköpostin?
+                    <a href="{{ url_for('auth.resend_confirmation') }}">Klikkaa tästä</a>
+                </p>
+            </div>
+        </div>   
+            
+        <div class="col-lg-2">        
+        </div>
+    </div>
+    <!--Row ends--> 
+
 {% endblock %}
