--- a/app/templates/contacts/feedback.html
+++ b/app/templates/contacts/feedback.html
@@ -12,47 +12,49 @@
         <div class="col-lg-8">             
                         
             <form class="custom-form" action="{{ url_for('main.feedback') }}" method="post">
-                <h2 style="text-align:center;">OTA MEIHIN YHTEYTTÄ</h2>                    
+                                   
                 {% if success %}
-                    <p style="text-align:center; font-size:200%;">Kiitos yhteydenotosta! <br>Otamme sinuun yhteyttä mahdollisimman pian.</p> 
+                    <h2 style="text-align:center;">Kiitos yhteydenotosta!</h2> 
+                    <p style="text-align:center; font-size:200%;">Otamme sinuun yhteyttä mahdollisimman pian.</p> 
                     <p><a href="{{ url_for('main.index') }}" class="btn btn-block mt-0 custom-green-buy">ETUSIVULLE</a></p>                   
                      
                 {% else %}
-
-                    {% for message in form.username.errors %}
-                        <div class="flash">{{ message }}</div>
-                    {% endfor %}
-
-                    {% for message in form.email.errors %}
-                        <div class="flash">{{ message }}</div>
-                    {% endfor %}
-
-                    {% for message in form.subject.errors %}
-                        <div class="flash">{{ message }}</div>
-                    {% endfor %}
-
-                    {% for message in form.message.errors %}
-                        <div class="flash">{{ message }}</div>
-                    {% endfor %}
-                    
+                    <h2 style="text-align:center;">OTA MEIHIN YHTEYTTÄ</h2>
+                                       
                     <div class="form-group">                    
                         {{ form.username.label }}                    
                         {{ form.username(class="form-control") }}
+
+                        {% for message in form.username.errors %}
+                        <div class="flash2">{{ message }}</div>
+                        {% endfor %}
                     </div>
 
                     <div class="form-group">                    
                         {{ form.email.label }}                    
                         {{ form.email(class="form-control") }}
+
+                        {% for message in form.email.errors %}
+                        <div class="flash2">{{ message }}</div>
+                        {% endfor %}
                     </div>                
 
                     <div class="form-group">                    
                         {{ form.subject.label }}                    
                         {{ form.subject(class="form-control") }}
+
+                        {% for message in form.subject.errors %}
+                        <div class="flash2">{{ message }}</div>
+                        {% endfor %}
                     </div>
 
                     <div class="form-group">                   
                         {{ form.message.label }}                    
-                        {{ form.message(class="form-control") }}                    
+                        {{ form.message(class="form-control") }} 
+                        
+                        {% for message in form.message.errors %}
+                        <div class="flash2">{{ message }}</div>
+                        {% endfor %}
                     </div>
 
                     <p></p>               
