--- a/app/templates/admins/reservation_admin.html
+++ b/app/templates/admins/reservation_admin.html
@@ -20,7 +20,7 @@ HIUSMAGIA parturi kampaamo
                         <li class="list-group-item d-flex justify-content-between custom-bg-menu">
                         <div class="custom-text-white">
                             <h6 class="my-0"><script>showToday();</script></h6>
-                            <small>VIIKKO <?php echo date("W");?></small>
+                            <!--<small>VIIKKO <?php echo date("W");?></small>-->
                         </div>                   
                         </li>
 
