client_cancel.html corrected

--- a/app/templates/auth/email/client_cancel.html
+++ b/app/templates/auth/email/client_cancel.html
@@ -1,6 +1,7 @@
-<p> CANCEL RESERVATION</p>>
-<p>Asiakas {{ username }},</p>
-<p>peruutti varauksen {{ date }} klo {{ time }} osaaja: {{ master }}</p>
+<p><b>CANCEL RESERVATION</b></p>
+<p><b>Asiakas</b> {{ username }},</p>
+<p>peruutti varauksen {{ date }} klo {{ time }}</p> 
+<p><b>Osaaja</b>: {{ master }}</p>
 <p>Tarkista aikataulu!</p>
 <p>Ilmoita osaajalle!</p>
 
