week, year, redirect, language corrections

--- a/app/templates/auth/email/client_cancel.html
+++ b/app/templates/auth/email/client_cancel.html
@@ -1,4 +1,4 @@
-<p><b>CANCEL RESERVATION</b></p>
+<p><b>AJANVARAUS PERUUTETTU</b></p>
 <p><b>Asiakas</b> {{ username }},</p>
 <p>peruutti varauksen {{ date }} klo {{ time }}</p> 
 <p><b>Osaaja</b>: {{ master }}</p>
