--- a/app/templates/auth/email/new_feedback.html
+++ b/app/templates/auth/email/new_feedback.html
@@ -1,6 +1,6 @@
 <p> UUSI PALAUTE</p>
 <p></p>
-<p><b>Asiakas</b>>: {{ username }}</p>
+<p><b>Asiakas</b>: {{ username }}</p>
 <p></p>
 <p><b>Sähköposti</b>: {{ email }}</p>
 <p></p>
