--- a/app/templates/customers/client_page.html
+++ b/app/templates/customers/client_page.html
@@ -21,7 +21,7 @@ HIUSMAGIA parturi kampaamo
                         <li class="list-group-item d-flex justify-content-between custom-bg-menu">
                         <div class="custom-text-white">
                             <h6 class="my-0"><script>showToday();</script></h6>
-                            <!--<small>VIIKKO <?php echo date("W");?></small>-->
+                            <small>VIIKKO <script>document.write(weekNumber);</script></small>
                         </div>                   
                         </li>
 
@@ -132,7 +132,7 @@ HIUSMAGIA parturi kampaamo
             <div class="col-lg-8">        
                 <div class="custom-form">
                 <h2 style="text-align: center;">KIRJAUDU ASIAKKAAN SIVULLE</h2> 
-                <p style="text-align: center; font-size: 120%;">AJAN VARAUS ON TARKOITETTU VAIN REKISTERÖTYNEILLE ASIAKKAILLE.<br>
+                <p style="text-align: center; font-size: 120%;">AJANVARAUS ON TARKOITETTU VAIN REKISTERÖTYNEILLE ASIAKKAILLE.<br>
                 KIRJAUDU ULOS ADMINISTRAATTORIN TILILTA<br> 
                 JA KIRJAUDU SISÄÄN ASIAKKAANA.<br>                 
                 </p>       
@@ -156,7 +156,7 @@ HIUSMAGIA parturi kampaamo
         <div class="col-lg-8">        
             <div class="custom-form">
             <h2 style="text-align: center;">KIRJAUDU ASIAKKAAN SIVULLE</h2> 
-            <p style="text-align: center; font-size: 120%;">AJAN VARAUS ON TARKOITETTU VAIN REKISTERÖTYNEILLE ASIAKKAILLE.<br>
+            <p style="text-align: center; font-size: 120%;">AJANVARAUS ON TARKOITETTU VAIN REKISTERÖTYNEILLE ASIAKKAILLE.<br>
             KIRJAUDU SISÄÄN TAI LUO TILI.<br> 
             SE ON ILMAISTA JA VIE VAIN PARI MINUUTTIA. 
             </p>       
