--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@ HIUSMAGIA parturi kampaamo
                     <p><a href="{{ url_for('main.client_page') }}" class="btn btn-block mt-0 custom-green-buy">SELAA AIKATAULUJA JA PERUUTA AIKOJA</a></p>
                 </div> 
                 <div class="col-xl-4">
-                    <p><a href="{{ url_for('main.reservation') }}" class="btn btn-block mt-0 custom-green-buy">VARAA AJKA MEIDÄN OSAAJILLE</a></p>
+                    <p><a href="{{ url_for('main.reservation') }}" class="btn btn-block mt-0 custom-green-buy">VARAA AIKA MEIDÄN OSAAJILLE</a></p>
                 </div>                               
                 <div class="col-xl-2"></div>                
             </div> 
