--- a/app/templates/auth/email/confirm.html
+++ b/app/templates/auth/email/confirm.html
@@ -1,6 +1,6 @@
 <p>Hyvä {{ user.username }},</p>
 <p>Tervetuloa <b>HIUSMAGIAAN</b>!</p>
-<p>Ole hyvä ja vahvista tilisi klikkaamalla <a href="{{ url_for('auth.confirm', token=token, _external=True) }}">tästä linkistä</a>.</p>
+<p>Ole hyvä ja vahvista tilisi klikkaamalla <a href="{{ url_for('auth.confirm', token=token, _external=True) }}">tätä linkiä</a>.</p>
 <p>Vaihtoehtoisesti voit liittää seuraavan linkin selaimesi osoiteriville:</p>
 <p>{{ url_for('auth.confirm', token=token, _external=True) }}</p>
 <p>Ystävällisin terveisin,</p>
