--- a/app/templates/customers/reservation.html
+++ b/app/templates/customers/reservation.html
@@ -20,7 +20,7 @@ HIUSMAGIA parturi kampaamo
                         <li class="list-group-item d-flex justify-content-between custom-bg-menu">
                         <div class="custom-text-white">
                             <h6 class="my-0"><script>showToday();</script></h6>
-                            <!--<small>VIIKKO <?php echo date("W");?></small>-->
+                            <small>VIIKKO <script>document.write(weekNumber);</script></small>
                         </div>                   
                         </li>
 
@@ -49,7 +49,7 @@ HIUSMAGIA parturi kampaamo
                 </div>
                 
                 <div class="col-md-8 order-md-1">
-                    <h4 class="mb-4 text-success">AJAN VARAUS OSAAJALLE</h4>
+                    <h4 class="mb-4 text-success">AJANVARAUS OSAAJALLE</h4>
                     <div style="background: white; padding: 1%; margin: 1%; border-radius:3px; text-align:center;">
                         <p></p>
                         <p>Jos haluttu palvelu ei löydetty haluttuun aikaan, 
@@ -130,7 +130,7 @@ HIUSMAGIA parturi kampaamo
                                         <th scope="col">Liikuntalaji</th>
                                         <th scope="col">Ohjaaja</th>
                                         <th scope="col">Vapaat paikat</th>
-                                        <th scope="col">Ajan varaus</th>                        
+                                        <th scope="col">Ajanvaraus</th>                        
                                     </tr>-->
                                 </thead>
 
@@ -156,7 +156,7 @@ HIUSMAGIA parturi kampaamo
             <div class="col-lg-8">        
                 <div class="custom-form">
                 <h2 style="text-align: center;">KIRJAUDU ASIAKKAAN SIVULLE</h2> 
-                <p style="text-align: center; font-size: 120%;">AJAN VARAUS ON TARKOITETTU VAIN REKISTERÖTYNEILLE ASIAKKAILLE.<br>
+                <p style="text-align: center; font-size: 120%;">AJANVARAUS ON TARKOITETTU VAIN REKISTERÖTYNEILLE ASIAKKAILLE.<br>
                 KIRJAUDU ULOS ADMINISTRAATTORIN TILILTA<br> 
                 JA KIRJAUDU SISÄÄN ASIAKKAANA.<br>                 
                 </p>       
@@ -180,7 +180,7 @@ HIUSMAGIA parturi kampaamo
         <div class="col-lg-8">        
             <div class="custom-form">
             <h2 style="text-align: center;">KIRJAUDU ASIAKKAAN SIVULLE</h2> 
-            <p style="text-align: center; font-size: 120%;">AJAN VARAUS ON TARKOITETTU VAIN REKISTERÖTYNEILLE ASIAKKAILLE.<br>
+            <p style="text-align: center; font-size: 120%;">AJANVARAUS ON TARKOITETTU VAIN REKISTERÖTYNEILLE ASIAKKAILLE.<br>
             KIRJAUDU SISÄÄN TAI LUO TILI.<br> 
             SE ON ILMAISTA JA VIE VAIN PARI MINUUTTIA. 
             </p>       
