--- a/app/templates/company/fonts.html
+++ b/app/templates/company/fonts.html
@@ -6,7 +6,7 @@ HIUSMAGIA parturi kampaamo
     <div class="custom-adds">
         <div class="row">
         <div class="col-xl-8" style="color:white">
-            <p style="font-size: 350%; font-family: 'Macondo', cursive;"> HIUSMAGIA </p>
+            <p style="font-size: 350%; font-family: 'Macondo', cursive;">m          H          <br>IUSMAGIA </p>
             
             <p style="font-size: 200%; font-family: 'Fredericka the Great', cursive;"> HIUSMAGIA </p>
             <p style="font-size: 200%; font-family: 'Codystar', cursive;"> HIUSMAGIA </p>
