--- a/app/templates/admins/change_service.html
+++ b/app/templates/admins/change_service.html
@@ -31,7 +31,11 @@ HIUSMAGIA parturi kampaamo
                     <label class="col-sm-3 col-form-label">{{ form.date.label }}</label>
                                         
                     <div class="col">                                              
-                        {{ form.date(id="date", class="form-control mr-5",value=date) }}                        
+                        {{ form.date(id="date", class="form-control mr-5",value=date) }}
+                         
+                        {% for message in form.date.errors %}
+                        <div class="flash2">{{ message }}</div>
+                        {% endfor %}                          
                     </div>
                 </div>
 
@@ -40,6 +44,10 @@ HIUSMAGIA parturi kampaamo
                      
                     <div class="col">                        
                         {{ form.time(id="time", class="form-control mr-5",value=time) }} 
+                       
+                        {% for message in form.time.errors %}
+                        <div class="flash2">{{ message }}</div>
+                        {% endfor %}   
                     </div>
                 </div>
 
