--- a/app/templates/customers/client_page.html
+++ b/app/templates/customers/client_page.html
@@ -41,7 +41,7 @@ HIUSMAGIA parturi kampaamo
                         <li class="list-group-item d-flex justify-content-between lh-condensed">
                         <div>
                             <h6 class="my-0"><a href="{{ url_for('main.reservation') }}" class="custom-ins-link">Varaa aika</a></h6>
-                            <small class="text-muted">Varaa ajka valitsemasi osaajalle</small>
+                            <small class="text-muted">Varaa aika valitsemasi osaajalle</small>
                         </div>                    
                         </li>                                     
                     </ul>               
