--- a/app/templates/admins/reservation_admin.html
+++ b/app/templates/admins/reservation_admin.html
@@ -74,6 +74,7 @@ HIUSMAGIA parturi kampaamo
                         <!--Row starts-->
                         <div class="row">
                             <form class="form-inline justify-content-center mt-4"  method="get">
+                                    {{ form.hidden_tag() }}
                             
                                 <div class="form-group justify-content-center col-md-6 mb-4">
                                     <!--<label class="mr-4">Alkaen</label>
