--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -29,7 +29,8 @@
         <div class="col-lg-8">
             
             <form class="custom-form" action="" method="post">
-                <h2 style="text-align: center;">KIRJAUDU</h2>               
+                <h2 style="text-align: center;">KIRJAUDU</h2> 
+                    {{ form.hidden_tag() }}              
 
                 <div class="form-group">
                     <!--<label>Sähköposti</label>
