--- a/app/templates/contacts/feedback.html
+++ b/app/templates/contacts/feedback.html
@@ -20,6 +20,7 @@
                      
                 {% else %}
                     <h2 style="text-align:center;">OTA MEIHIN YHTEYTTÄ</h2>
+                        {{ form.hidden_tag() }}
                                        
                     <div class="form-group">                    
                         {{ form.username.label }}                    
