--- a/app/templates/auth/change_password.html
+++ b/app/templates/auth/change_password.html
@@ -14,6 +14,7 @@
             
             <form class="custom-form" action="" method="post">
                 <h2 style="text-align: center;">VAIHDA SALASANA</h2>
+                    {{ form.hidden_tag() }}
 
                 <div class="form-group">                    
                     {{ form.old_password.label }}                    
