--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -13,7 +13,8 @@
         <div class="col-lg-8">
             
             <form class="custom-form" action="" method="post">
-                <h2 style="text-align: center;">NOLLAA SALASANA</h2>               
+                <h2 style="text-align: center;">NOLLAA SALASANA</h2>
+                {{ form.hidden_tag() }}               
 
                 <div class="form-group">                    
                     {{ form.email.label }}                    
