--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,9 +11,9 @@ HIUSMAGIA parturi kampaamo
             <h2 style="color:white; font-family: 'Codystar', cursive; font-size: 230%;"><b>SAA HIUSTENLEIKKAUS SEN SIJAAN</b></h2>
             <h2 style="color:white; font-family: 'Train One', cursive; font-size: 230%;"><b>OLEMME HIENOJA KUUNTELIJOITA</b></h2>-->  
             
-            <h2 style="color:white; font-family: 'Codystar', cursive; font-size: 230%;"><b>TERAPIA ON KALLISTA</b></h2>
-            <h2 style="color:white; font-family: 'Train One', cursive; font-size: 210%;"><b>SAA HIUSTENLEIKKAUS SEN SIJAAN</b></h2>
-            <h2 style="color:white; font-family: 'Codystar', cursive; font-size: 230%;"><b>OLEMME HIENOJA KUUNTELIJOITA</b></h2>  
+            <h2 style="color:white; font-family: 'Codystar', cursive; font-size: 210%;"><b>TERAPIA ON KALLISTA</b></h2>
+            <h2 style="color:white; font-family: 'Train One', cursive; font-size: 180%;"><b>SAA HIUSTENLEIKKAUS SEN SIJAAN</b></h2>
+            <h2 style="color:white; font-family: 'Codystar', cursive; font-size: 210%;"><b>OLEMME HIENOJA KUUNTELIJOITA</b></h2>  
         </div>         
         </div>     
     </div>      
@@ -30,7 +30,8 @@ HIUSMAGIA parturi kampaamo
                                             
                     <div class="custom-overlay">                   
                         <div class="custom-image-text">
-                            Shampoot                
+                            This is a school project!<br>
+                            Photo &copy;                 
                         </div>                    
                     </div>                
             </div>                    
@@ -44,7 +45,8 @@ HIUSMAGIA parturi kampaamo
                     <div class="custom-top-right"><h3>alk.15€</h3></div>
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                            Hoitoaineet               
+                            This is a school project!<br>
+                            Photo &copy;               
                         </div>
                     </div>
             </div>                    
@@ -63,7 +65,8 @@ HIUSMAGIA parturi kampaamo
                     <div class="custom-top-right"><h3>alk.30€</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                            Muotoilutuotteet                                                             
+                            This is a school project!<br>
+                            Photo &copy;                                                             
                         </div>
                     </div>
             </div>                    
@@ -77,7 +80,8 @@ HIUSMAGIA parturi kampaamo
                     <div class="custom-top-right"><h3>alk.25€</h3></div>
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                            Hiusvärit         
+                            This is a school project!<br>
+                            Photo &copy;        
                         </div>
                     </div>
             </div>                    
@@ -96,7 +100,8 @@ HIUSMAGIA parturi kampaamo
                     <div class="custom-top-right"><h3>alk.20€</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                            Permanenttiaineet            
+                            This is a school project!<br>
+                            Photo &copy;            
                         </div>
                     </div>
             </div>                    
@@ -110,7 +115,8 @@ HIUSMAGIA parturi kampaamo
                     <div class="custom-top-right"><h3>alk.10€</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                            Tarvikkeet             
+                            This is a school project!<br>
+                            Photo &copy;            
                         </div>
                     </div>
             </div>                    
