Procfile, requiremens, runtime, pics corrected

--- a/app/templates/palvelut/palvelut.html
+++ b/app/templates/palvelut/palvelut.html
@@ -39,7 +39,7 @@ HIUSMAGIA parturi kampaamo
         </div>
         <div class="col custom-margin-bottom">
             <div class="card h-100 custom-card">
-            <img src="{{ url_for('static', filename='/pics/kampaukset.jpeg/') }}" class="card-img-top" alt="...">
+            <img src="{{ url_for('static', filename='/pics/kampaukset.jpg/') }}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Kampaukset</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
