--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@ HIUSMAGIA parturi kampaamo
             <h2 style="color:white; font-family: 'Train One', cursive; font-size: 230%;"><b>OLEMME HIENOJA KUUNTELIJOITA</b></h2>-->  
             
             <h2 style="color:white; font-family: 'Codystar', cursive; font-size: 210%;"><b>TERAPIA ON KALLISTA</b></h2>
-            <h2 style="color:white; font-family: 'Train One', cursive; font-size: 180%;"><b>SAA HIUSTENLEIKKAUS SEN SIJAAN</b></h2>
+            <h2 style="color:white; font-family: 'Train One', cursive; font-size: 190%;"><b>SAA HIUSTENLEIKKAUS SEN SIJAAN</b></h2>
             <h2 style="color:white; font-family: 'Codystar', cursive; font-size: 210%;"><b>OLEMME HIENOJA KUUNTELIJOITA</b></h2>  
         </div>         
         </div>     
@@ -25,13 +25,14 @@ HIUSMAGIA parturi kampaamo
                 <div class="col-xl-7 custom-cart-title-l" ><div class="custom-cart-title-wrap">Shampoot</div></div>
                 <div class="col-xl-5 custom-cart-title-r" ><a href="{{ url_for('main.tuoteluettelo') }}" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product1.jpg/') }}" alt=""> 
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/shampoot.jpg/') }}" alt=""> 
                     <div class="custom-top-right"><h3>alk.20€</h3></div> 
                                             
                     <div class="custom-overlay">                   
                         <div class="custom-image-text">
-                            This is a school project!<br>
-                            Photo &copy;                 
+                            This is a school project<br>
+                            not a company website!<br>
+                            Photo by Alesia Kozik from Pexels                 
                         </div>                    
                     </div>                
             </div>                    
@@ -41,12 +42,13 @@ HIUSMAGIA parturi kampaamo
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Hoitoaineet</div></div>
                 <div class="col-xl-5 custom-cart-title-r"><a href="{{ url_for('main.tuoteluettelo') }}" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product2.jpg/') }}" alt=""> 
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/hoitoaineet.jpg/') }}" alt=""> 
                     <div class="custom-top-right"><h3>alk.15€</h3></div>
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                            This is a school project!<br>
-                            Photo &copy;               
+                            This is a school project<br>
+                            not a company website!<br>
+                            Photo by Alesia Kozik from Pexels               
                         </div>
                     </div>
             </div>                    
@@ -61,12 +63,13 @@ HIUSMAGIA parturi kampaamo
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Muotoilutuotteet</div></div>
                 <div class="col-xl-5 custom-cart-title-r"><a href="{{ url_for('main.tuoteluettelo') }}" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product1.jpg/') }}" alt="">
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/muotoilutuotteet.jpg/') }}" alt="">
                     <div class="custom-top-right"><h3>alk.30€</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                            This is a school project!<br>
-                            Photo &copy;                                                             
+                            This is a school project<br>
+                            not a company website!<br>
+                            Photo by Alesia Kozik from Pexels                                                             
                         </div>
                     </div>
             </div>                    
@@ -76,12 +79,13 @@ HIUSMAGIA parturi kampaamo
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Hiusvärit</div></div>
                 <div class="col-xl-5 custom-cart-title-r"><a href="{{ url_for('main.tuoteluettelo') }}" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product2.jpg/') }}" alt=""> 
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/hiusvarit.jpg/') }}" alt=""> 
                     <div class="custom-top-right"><h3>alk.25€</h3></div>
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                            This is a school project!<br>
-                            Photo &copy;        
+                            This is a school project<br>
+                            not a company website!<br>
+                            Photo by Alesia Kozik from Pexels       
                         </div>
                     </div>
             </div>                    
@@ -96,12 +100,13 @@ HIUSMAGIA parturi kampaamo
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Permanenttiaineet</div></div>
                 <div class="col-xl-5 custom-cart-title-r"><a href="{{ url_for('main.tuoteluettelo') }}" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product1.jpg/') }}" alt="">
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/permanenttiaineet.jpg/') }}" alt="">
                     <div class="custom-top-right"><h3>alk.20€</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                            This is a school project!<br>
-                            Photo &copy;            
+                            This is a school project<br>
+                            not a company website!<br>
+                            Photo by Anna Shvets from Pexels                                      
                         </div>
                     </div>
             </div>                    
@@ -111,12 +116,13 @@ HIUSMAGIA parturi kampaamo
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Tarvikkeet</div></div>
                 <div class="col-xl-5 custom-cart-title-r"><a href="{{ url_for('main.tuoteluettelo') }}" class="custom-cart">TUOTELUETTELOON</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/product2.jpg/') }}" alt="">
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/tarvikkeet.jpg/') }}" alt="">
                     <div class="custom-top-right"><h3>alk.10€</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
-                            This is a school project!<br>
-                            Photo &copy;            
+                            This is a school project<br>
+                            not a company website!<br>
+                            Photo by cottonbro from Pexels                                        
                         </div>
                     </div>
             </div>                    
