--- a/app/templates/auth/email/client_cancel.html
+++ b/app/templates/auth/email/client_cancel.html
@@ -1,7 +1,7 @@
 <p><b>AJANVARAUS PERUUTETTU</b></p>
-<p><b>Asiakas</b> {{ username }},</p>
+<p><b>Asiakas:</b> {{ username }}</p>
 <p>peruutti varauksen {{ date }} klo {{ time }}</p> 
-<p><b>Osaaja</b>: {{ master }}</p>
+<p><b>Osaaja:</b> {{ master }}</p>
 <p>Tarkista aikataulu!</p>
 <p>Ilmoita osaajalle!</p>
 
